confirmation code fragment is done + a couple of improvements

--- a/app/src/main/res/layout/fragment_email_confirmation.xml
+++ b/app/src/main/res/layout/fragment_email_confirmation.xml
@@ -15,12 +15,39 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.vadimsalavatov.mobiledev.ui.emailconfirmation.VerificationCodeEditText
-        app:vcet_slotsCount="8"
-        app:layout_constraintStart_toStartOf="parent"
+    <TextView
+        android:id="@+id/codeIsSentText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="48dp"
+        android:gravity="center"
+        android:paddingHorizontal="20dp"
+        android:text="@string/email_confirmation_code_is_sent_text"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/backButton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/backButton" />
+
+    <com.vadimsalavatov.mobiledev.ui.emailconfirmation.VerificationCodeEditText
+        android:id="@+id/codeTextEdit"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_marginTop="48dp"
+        android:paddingHorizontal="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/codeIsSentText"
+        app:vcet_slotsCount="8" />
+
+    <Button
+        android:id="@+id/confirmButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginBottom="48dp"
+        android:text="@string/email_confirmation_confirm_code_button_text"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
