--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,5 +14,8 @@
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:windowLightStatusBar">true</item>
         <item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">true</item>
+
+        <item name="materialButtonStyle">@style/Widget.MobileDevCourse.Button</item>
+        <item name="checkboxStyle">@style/Widget.MobileDevCourse.CheckBox</item>
     </style>
 </resources>
