--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -6,17 +6,13 @@
 
     <ImageButton
         android:id="@+id/backButton"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:src="@drawable/ic_arrow_back_black_24dp"
+        style="@style/Widget.MobileDevCourse.Button.Back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/firstnameTextInputLayout"
+        style="@style/Widget.MobileDevCourse.TextInputLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
@@ -36,6 +32,7 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/lastnameTextInputLayout"
+        style="@style/Widget.MobileDevCourse.TextInputLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
@@ -55,6 +52,7 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/nicknameTextInputLayout"
+        style="@style/Widget.MobileDevCourse.TextInputLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
@@ -68,6 +66,7 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/nicknameEditText"
+            style="@style/Widget.MobileDevCourse.TextInputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="text" />
@@ -76,6 +75,7 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/emailTextInputLayout"
+        style="@style/Widget.MobileDevCourse.TextInputLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
@@ -89,6 +89,7 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/emailEditText"
+            style="@style/Widget.MobileDevCourse.TextInputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress" />
@@ -97,6 +98,7 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/passwordTextInputLayout"
+        style="@style/Widget.MobileDevCourse.TextInputLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
@@ -128,6 +130,7 @@
 
     <Button
         android:id="@+id/signUpButton"
+        style="@style/Widget.MobileDevCourse.Button.Secondary"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
