--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="gray">#CCCCCC</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="brand_green">#6DC8C3</color>
+    <color name="brand_orange">#F7A83E</color>
+    <color name="brand_blue">#2B12C3</color>
 </resources>
