--- a/app/src/main/res/layout/fragment_email_confirmation.xml
+++ b/app/src/main/res/layout/fragment_email_confirmation.xml
@@ -45,9 +45,22 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
         android:layout_marginBottom="48dp"
+        android:layout_marginTop="48dp"
         android:text="@string/email_confirmation_confirm_code_button_text"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/codeTextEdit"/>
+
+    <Button
+        android:id="@+id/openMailAppButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginBottom="48dp"
+        android:layout_marginTop="48dp"
+        android:text="@string/email_confirmation_open_mail_app_button_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
