--- a/app/src/main/res/layout/fragment_email_confirmation.xml
+++ b/app/src/main/res/layout/fragment_email_confirmation.xml
@@ -36,7 +36,7 @@
 
     <Button
         android:id="@+id/confirmButton"
-        style="@style/Widget.MobileDevCourse.Button.Secondary"
+        style="@style/Widget.MobileDevCourse.Button.Primary"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
@@ -48,6 +48,7 @@
         app:layout_constraintTop_toBottomOf="@id/codeTextEdit"/>
 
     <Button
+        style="@style/Widget.MobileDevCourse.Button.Secondary"
         android:id="@+id/openMailAppButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
