--- a/app/src/main/res/layout/fragment_email_confirmation.xml
+++ b/app/src/main/res/layout/fragment_email_confirmation.xml
@@ -35,6 +35,31 @@
         app:vcet_slotsCount="8" />
 
     <Button
+        android:id="@+id/sendCodeAgainButton"
+        style="@style/Widget.MobileDevCourse.LinkButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/email_confirmation_send_code_again_button_text"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginTop="12dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/codeTextEdit"
+        />
+    <TextView
+        android:id="@+id/sendCodeAgainHintText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:visibility="invisible"
+        android:text="@string/email_confirmation_send_code_again_hint_template"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/sendCodeAgainButton"
+        />
+
+
+    <Button
         android:id="@+id/confirmButton"
         style="@style/Widget.MobileDevCourse.Button.Primary"
         android:layout_width="0dp"
@@ -45,7 +70,7 @@
         android:text="@string/email_confirmation_confirm_code_button_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/codeTextEdit"/>
+        app:layout_constraintTop_toBottomOf="@id/sendCodeAgainButton"/>
 
     <Button
         style="@style/Widget.MobileDevCourse.Button.Secondary"
